--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation("androidx.datastore:datastore-preferences:1.0.0")
+
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'joda-time:joda-time:2.12.2'
+    implementation 'io.coil-kt:coil:2.2.2'
+    implementation 'androidx.preference:preference:1.2.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -83,6 +87,4 @@ dependencies {
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.10.0"))
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
-
-    implementation 'io.coil-kt:coil:2.2.2'
 }
