--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,8 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.13.0"
-    //implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     // Okhttp
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.10.0"))
